k8s/base/istio/virtualservice-mock-server.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: mock-server
spec:
  hosts:
    - "mock.local"
  gateways:
    - public-gateway
  http:
    - route:
        - destination:
            host: mock-server
            port:
              number: 80
