k8s/base/istio/virtualservice-redis.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: redisinsight
spec:
  hosts:
    - "redis.local"
  gateways:
    - public-gateway
  http:
    - route:
        - destination:
            host: redisinsight
            port:
              number: 80
